tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier10UEV-D_aFb1hFQH2PDkN0_KvAEQ==__InfinityPants-E851J_UMQl6d9EwLLLg6AQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 17657561211257502209,
  "prerequisites": [
    467
  ],
  "properties": {
    "auto_claim": false,
    "desc": "An armor set worthy of a God. These pants have no special effects on their own but are required to complete the full infinity set.\n\nWhile wearing the complete set, you are completely unkillable.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Infinity Pants",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    467
  ],
  "rewards": [],
  "tasks": []
}
