tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier10UEV-D_aFb1hFQH2PDkN0_KvAEQ==__LongbowoftheHeav-AAAAAAAAAAAAAAAAAAAKnA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2716,
  "prerequisites": [
    467,
    2582
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Weak compared to both weapons of its tier, and the weapons it's made of, this bow doesn't use arrows, never breaks, does 10 damage, and has an AoE of 10 more arrows that do 10 damage each fly down each time it strikes.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Longbow of the Heavens",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    467,
    2582
  ],
  "rewards": [],
  "tasks": []
}
