tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier10UEV-D_aFb1hFQH2PDkN0_KvAEQ==__Myeyeshurt1-U4zxsdwqTUKsbTATYEJirg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 15864577584844137134,
  "prerequisites": [
    3216,
    13569149670760513735,
    12736547300596801155
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Finally, you are ready to assemble these new circuits. This is a UV-tier circuit.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "My Eyes Hurt! #1",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3216,
    13569149670760513735,
    12736547300596801155
  ],
  "rewards": [],
  "tasks": []
}
