tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier10UEV-D_aFb1hFQH2PDkN0_KvAEQ==__Myeyeshurt3-WIx0jq8hS8ifWxZWTmC5yA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 12619450954549344712,
  "prerequisites": [
    4753904296597250358
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The optical supercomputer is the third optical circuit. It is a UEV-tier circuit",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "My Eyes Hurt! #3",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    4753904296597250358
  ],
  "rewards": [],
  "tasks": []
}
