tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier10UEV-D_aFb1hFQH2PDkN0_KvAEQ==__OneLastTime-msIxGO5gQCWJPmEyp_JhtQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 17176799509266719157,
  "prerequisites": [
    13520174359713356034
  ],
  "properties": {
    "auto_claim": false,
    "desc": "For the final circuit line currently in the game, you will need to either make one last circuit assembler, or a UEV hatch for your circuit assembly machine.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "One Last Time",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    13520174359713356034
  ],
  "rewards": [],
  "tasks": []
}
